--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "2.7"
   - "2.6"
   - "2.5"
+  - "pypy"
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: "pip install -r requirements.txt --use-mirrors"
 # command to run tests, e.g. python setup.py test
